--- a/dashboard/style.css
+++ b/dashboard/style.css
@@ -26,5 +26,9 @@ img {
 h1 {
     display: flex;
     justify-content: center
-    
+
+}
+.row{
+    display: flex;
+    justify-content: space-between;
 }
